--- a/frontend/src/admin/admin.html
+++ b/frontend/src/admin/admin.html
@@ -19,7 +19,7 @@
   <body>
     <div class="docBody" id="app-vue">
       <sidebar></sidebar>
-      <titlebar></titlebar>
+      <titlebar></titlebar> 
       <main-pane></main-pane>
     </div>
     <script src="/static/js/stops.js"></script>
@@ -27,6 +27,6 @@
     <script src="/static/js/vehicles.js"></script>
     <script src="/static/js/messages.js"></script>
     <script src="/static/js/admin.js"></script>
-
+    <script src="/static/js/takeover.js"></script>
   </body>
 </html>
