--- a/frontend/src/admin/admin.html
+++ b/frontend/src/admin/admin.html
@@ -27,6 +27,7 @@
     <script src="/static/js/vehicles.js"></script>
     <script src="/static/js/messages.js"></script>
     <script src="/static/js/admin.js"></script>
+    <script src="/static/js/admin.js"></script>
 
   </body>
 </html>
